# nfs-share-manager

./: .gitignore  AUTO_REFRESH_IMPLEMENTATION_SUMMARY.md  BUILD_SUCCESS_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FUNCTIONALITY_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  SHARE_PERSISTENCE_AND_DISCOVERY_FIXES_SUMMARY.md  TASK_13_1_PROGRESS_INDICATION_SUMMARY.md  TASK_13_3_NOTIFICATION_SYSTEM_SUMMARY.md  TASK_14_1_STARTUP_INITIALIZATION_SUMMARY.md  TASK_14_3_INTEGRATION_SUMMARY.md  TASK_15_1_END_TO_END_INTEGRATION_SUMMARY.md  TASK_2_3_SUMMARY.md  TASK_2_SYSTEM_INTEGRATION_SUMMARY.md  TASK_3_BUSINESS_LOGIC_SUMMARY.md  TASK_6_1_SUMMARY.md  TASK_6_CONFIGURATION_SUMMARY.md  TASK_7_1_SUMMARY.md  TASK_7_3_SUMMARY.md  TIMEOUT_CANCEL_IMPLEMENTATION_SUMMARY.md  demo_app.sh  run_e2e_demo
docs/: PolicyKitHelper.md
releases/: README.md  RELEASE_NOTES.md  USAGE.md  VERSION  install.sh  nfs-share-manager-v1.1.0-installer.sh  verify-release.sh
releases/policy/: org.kde.nfs-share-manager.policy
src/: CMakeLists.txt  main.cpp
src/business/: mountmanager.cpp  mountmanager.h  networkdiscovery.cpp  networkdiscovery.h  permissionmanager.cpp  permissionmanager.h  sharemanager.cpp  sharemanager.h
src/system/: filesystemwatcher.cpp  filesystemwatcher.h  networkmonitor.cpp  networkmonitor.h  nfsserviceinterface.cpp  nfsserviceinterface.h  policykithelper.cpp  policykithelper.h
src/ui/: conflictresolutiondialog.cpp  conflictresolutiondialog.h  mainwindow.cpp  mainwindow.h  mountdialog.cpp  mountdialog.h  nfssharemanager.cpp  nfssharemanager.h  nfssharemanager_original.cpp  notificationmanager.cpp  notificationmanager.h  notificationpreferencesdialog.cpp  notificationpreferencesdialog.h  operationmanager.cpp  operationmanager.h  permissionmanagerdialog.cpp  permissionmanagerdialog.h  progressdialog.cpp  progressdialog.h  shareconfigdialog.cpp  shareconfigdialog.h  sharecreatedialog.cpp  sharecreatedialog.h  startupguidancedialog.cpp  startupguidancedialog.h  systemtrayicon.cpp  systemtrayicon.h
tests/: CMakeLists.txt
tests/business/: CMakeLists.txt  test_business_integration.cpp  test_mountmanager.cpp  test_networkdiscovery.cpp  test_sharemanager.cpp
tests/integration/: CMakeLists.txt  run_e2e_demo.cpp  test_e2e_demo.cpp  test_end_to_end_simple.cpp  test_end_to_end_workflows.cpp
tests/property/: CMakeLists.txt  generators.cpp  generators.h  property_test_base.cpp  property_test_base.h  test_property_configurationmanager.cpp  test_property_networkdiscovery.cpp  test_property_networkmonitor.cpp
tests/system/: CMakeLists.txt  test_filesystemwatcher.cpp  test_nfsserviceinterface.cpp  test_policykithelper.cpp
tests/ui/: CMakeLists.txt  test_component_integration.cpp  test_notificationmanager.cpp  test_permission_integration.cpp  test_permissionmanager_basic.cpp  test_permissionmanagerdialog.cpp  test_progress_indication.cpp
tests/utils/: CMakeLists.txt  test_helpers.cpp  test_helpers.h
